--- a/style/css/index.css
+++ b/style/css/index.css
@@ -11,7 +11,7 @@ body {
   scroll-behavior: smooth;
   font-family: "Fira Sans Condensed", Arial, sans-serif;
   font-size: 10px;
-  color: var(--font-color);
+  color: #141414;
 }
 
 img {
@@ -19,13 +19,21 @@ img {
   display: block;
 }
 
+.subtitulo {
+  font-size: 12.8rem;
+  line-height: 1;
+  text-transform: uppercase;
+  word-break: break-all;
+  max-width: 4ch;
+}
+
 .header {
+  max-width: 120rem;
+  padding: 4rem 2rem;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 4rem 2rem;
-  max-width: 120rem;
-  margin: 0 auto;
 }
 .header .header-menu {
   display: flex;
@@ -39,7 +47,7 @@ img {
   color: #141414;
   padding: 1rem 2rem;
 }
-@media (max-width: 80rem) {
+@media (max-width: 800px) {
   .header {
     flex-direction: column;
     gap: 4rem;
@@ -49,6 +57,146 @@ img {
     background-color: #f5f5f5;
     border-radius: 0.4rem;
   }
+}
+@media (max-width: 620px) {
+  .header .header-menu {
+    flex-direction: column;
+    gap: 4rem;
+    align-items: center;
+  }
+}
+
+main.introducao {
+  max-width: 120rem;
+  padding: 4rem 2rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 10rem;
+  align-items: center;
+}
+main.introducao h1 {
+  font-size: 7.2rem;
+  line-height: 1.125;
+  margin-bottom: 3rem;
+  position: relative;
+}
+main.introducao h1::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 13rem;
+  height: 10rem;
+  background: url("../../img/detalhe.svg") no-repeat center;
+  top: -15px;
+  left: -40px;
+  z-index: -1;
+}
+main.introducao p {
+  font-size: 2.4rem;
+  color: #525252;
+}
+@media (max-width: 1000px) {
+  main.introducao h1 {
+    font-size: 4.8rem;
+  }
+}
+@media (max-width: 800px) {
+  main.introducao {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
+  }
+  main.introducao h1 {
+    font-size: 3.2rem;
+  }
+  main.introducao h1::before {
+    width: 3rem;
+    height: 1rem;
+    left: 0rem;
+  }
+}
+@media (max-width: 600px) {
+  main.introducao {
+    grid-template-columns: 1fr;
+    place-items: center;
+    text-align: center;
+  }
+  main.introducao img {
+    display: none;
+  }
+}
+
+.experiencia {
+  max-width: 120rem;
+  padding: 4rem 2rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  /*gap: 10rem;*/
+}
+.experiencia .subtitulo {
+  color: #e0e0e0;
+}
+.experiencia .xp-text {
+  font-size: 2.4rem;
+  line-height: 1.33;
+  max-width: 40ch;
+  margin-bottom: 6rem;
+  color: #525252;
+}
+.experiencia .xp-text strong {
+  color: #141414;
+}
+.experiencia .empresa {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 2rem;
+  background: #f5f5f5;
+  margin-bottom: 2rem;
+  border-radius: 0.4rem;
+  gap: 1rem 2rem;
+  position: relative;
+}
+.experiencia .empresa-ano {
+  position: absolute;
+  top: 30px;
+  left: -150px;
+  text-align: right;
+  color: #525252;
+  font-size: 1.4rem;
+}
+.experiencia .empresa-titulo {
+  font-size: 1.8rem;
+  line-height: 1.1;
+  font-weight: 700;
+}
+.experiencia .empresa-texto {
+  font-size: 1.4rem;
+  line-height: 1.4;
+  color: #525252;
+}
+.experiencia .empresa-habilidades {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  align-content: start;
+}
+.experiencia .empresa-habilidades li {
+  font-size: 1.4rem;
+  line-height: 1.4;
+  border-radius: 0.4rem;
+  background: #fff;
+  padding: 0.5rem 1rem;
+}
+.experiencia .empresa::before {
+  content: "";
+  position: absolute;
+  top: 30px;
+  left: -4px;
+  display: block;
+  width: 0.4rem;
+  height: 2rem;
+  background: linear-gradient(#b6f829, #67dd0a);
 }
 
 /*# sourceMappingURL=index.css.map */
