--- a/style/sass/global.scss
+++ b/style/sass/global.scss
@@ -1,5 +1,13 @@
+//Variables - colors and fonts
 $font-color: #141414;
+$font-color-gray: #525252;
+$font-color-ligth-gray: #e0e0e0;
+$font-color-white: #f5f5f5;
+$font-color-green-gradient: linear-gradient(#b6f829,#67dd0a);
+$font-white: #fff;
+$font-size: 10px;
 
+//Global - Reset Css
 *{
   margin: 0;
   padding: 0;
@@ -11,11 +19,27 @@ $font-color: #141414;
 body{
   scroll-behavior: smooth;
   font-family: 'Fira Sans Condensed', Arial, sans-serif;
-  font-size: 10px;
-  color: var(--font-color);
+  font-size: $font-size;
+  color: $font-color;
 }
 
 img{
   max-width: 100%;
   display: block;
+}
+
+.subtitulo{
+  font-size: 12.8rem;
+  line-height: 1;
+  text-transform: uppercase;
+  word-break: break-all;
+  max-width: 4ch;
+}
+
+//Mixins
+@mixin display($display){
+  max-width: 120rem;
+  padding: 4rem 2rem;
+  margin: 0 auto;//alinha ao centro quando o width ultrapassar o max-width
+  display: $display;
 }
