--- a/style/sass/header.scss
+++ b/style/sass/header.scss
@@ -1,10 +1,7 @@
 .header{
-  display: flex;
+  @include display(flex);
   justify-content: space-between;
   align-items: center;
-  padding: 4rem 2rem;
-  max-width: 120rem;
-  margin: 0 auto;//alinha ao centro quando o width ultrapassar o max-width
 
   .header-menu{
     display: flex;
@@ -20,14 +17,22 @@
     }
   }
 
-  @media (max-width: 80rem) {
+  @media (max-width: 800px) {
     flex-direction: column;
     gap: 4rem;
     padding: 2rem;
 
     .header-menu a {
-      background-color: #f5f5f5;
+      background-color: $font-color-white;
       border-radius: .4rem;
+    }
+  }
+
+  @media (max-width: 620px) {
+    .header-menu{
+      flex-direction: column;
+      gap: 4rem;
+      align-items: center;
     }
   }
 }
