--- a/style/css/index.css
+++ b/style/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   margin: 0;
@@ -11,7 +12,8 @@ body {
   scroll-behavior: smooth;
   font-family: "Fira Sans Condensed", Arial, sans-serif;
   font-size: 10px;
-  color: #141414;
+  background: #000;
+  color: #f5f5f5;
 }
 
 img {
@@ -25,6 +27,13 @@ img {
   text-transform: uppercase;
   word-break: break-all;
   max-width: 4ch;
+}
+@media (max-width: 80rem) {
+  .subtitulo {
+    font-size: 4.8rem;
+    text-transform: capitalize;
+    max-width: initial !important;
+  }
 }
 
 .header {
@@ -44,7 +53,7 @@ img {
 .header .header-menu a {
   font-size: 1.8rem;
   line-height: 1.3;
-  color: #141414;
+  color: #fff;
   padding: 1rem 2rem;
 }
 @media (max-width: 800px) {
@@ -54,7 +63,8 @@ img {
     padding: 2rem;
   }
   .header .header-menu a {
-    background-color: #f5f5f5;
+    background-color: #fff;
+    color: #141414;
     border-radius: 0.4rem;
   }
 }
@@ -94,7 +104,11 @@ main.introducao h1::before {
 }
 main.introducao p {
   font-size: 2.4rem;
-  color: #525252;
+  color: #f5f5f5;
+}
+main.introducao img {
+  margin-left: 5rem;
+  border-radius: 10%;
 }
 @media (max-width: 1000px) {
   main.introducao h1 {
@@ -103,8 +117,9 @@ main.introducao p {
 }
 @media (max-width: 800px) {
   main.introducao {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 4rem;
+    grid-template-columns: 1fr;
+    place-items: center;
+    text-align: center;
   }
   main.introducao h1 {
     font-size: 3.2rem;
@@ -113,13 +128,6 @@ main.introducao p {
     width: 3rem;
     height: 1rem;
     left: 0rem;
-  }
-}
-@media (max-width: 600px) {
-  main.introducao {
-    grid-template-columns: 1fr;
-    place-items: center;
-    text-align: center;
   }
   main.introducao img {
     display: none;
@@ -135,17 +143,17 @@ main.introducao p {
   /*gap: 10rem;*/
 }
 .experiencia .subtitulo {
-  color: #e0e0e0;
+  color: #fff;
 }
 .experiencia .xp-text {
   font-size: 2.4rem;
   line-height: 1.33;
   max-width: 40ch;
   margin-bottom: 6rem;
-  color: #525252;
+  color: #e0e0e0;
 }
 .experiencia .xp-text strong {
-  color: #141414;
+  color: #fff;
 }
 .experiencia .empresa {
   display: grid;
@@ -162,13 +170,14 @@ main.introducao p {
   top: 30px;
   left: -150px;
   text-align: right;
-  color: #525252;
+  color: #f5f5f5;
   font-size: 1.4rem;
 }
 .experiencia .empresa-titulo {
   font-size: 1.8rem;
   line-height: 1.1;
   font-weight: 700;
+  color: #141414;
 }
 .experiencia .empresa-texto {
   font-size: 1.4rem;
@@ -185,18 +194,164 @@ main.introducao p {
   font-size: 1.4rem;
   line-height: 1.4;
   border-radius: 0.4rem;
-  background: #fff;
+  background: #141414;
   padding: 0.5rem 1rem;
 }
 .experiencia .empresa::before {
   content: "";
   position: absolute;
-  top: 30px;
   left: -4px;
   display: block;
   width: 0.4rem;
   height: 2rem;
   background: linear-gradient(#b6f829, #67dd0a);
+  top: 30px;
+}
+@media (max-width: 40rem) {
+  .experiencia .empresa {
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 80rem) {
+  .experiencia {
+    grid-template-columns: 1fr;
+    gap: 4rem;
+  }
+  .experiencia .xp-text {
+    font-size: 2rem;
+  }
+  .experiencia .empresa-ano {
+    position: initial;
+    order: 1;
+    width: initial;
+    text-align: left;
+    color: #525252;
+  }
+  .experiencia .empresa-ano::before {
+    content: "Período: ";
+  }
+}
+
+.formacao {
+  background: #252525;
+}
+.formacao-container {
+  max-width: 120rem;
+  padding: 4rem 2rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 10rem;
+}
+.formacao-container .subtitulo {
+  color: #fff;
+}
+@media (max-width: 80rem) {
+  .formacao-container {
+    grid-template-columns: 1fr;
+    padding: 2rem 1rem;
+    gap: 4rem;
+  }
+}
+.formacao-texto {
+  font-size: 2.4rem;
+  line-height: 1.33;
+  max-width: 40ch;
+  margin-bottom: 6rem;
+  color: #a3a3a3;
+}
+.formacao-texto strong {
+  color: #fff;
+}
+@media (max-width: 80rem) {
+  .formacao-texto {
+    font-size: 2rem;
+  }
+}
+.formacao .faculdade {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin-bottom: 6rem;
+  max-width: 20rem;
+}
+.formacao .faculdade-item {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  background: #000;
+  padding: 2rem;
+  border-radius: 0.4rem;
+}
+.formacao .faculdade-tipo {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  color: #a3a3a3;
+  margin-bottom: 1rem;
+}
+.formacao .faculdade-curso {
+  flex: 1;
+  font-size: 1.8rem;
+  line-height: 1.4;
+  margin-bottom: 4rem;
+  position: relative;
+}
+.formacao .faculdade-curso::before {
+  content: "";
+  position: absolute;
+  left: -24px;
+  display: block;
+  width: 0.4rem;
+  height: 2rem;
+  background: linear-gradient(#b6f829, #67dd0a);
+}
+.formacao .faculdade-instituicao {
+  font-size: 1.8rem;
+  color: #a3a3a3;
+}
+.formacao-extra .cursos {
+  margin-bottom: 6rem;
+}
+.formacao-extra .cursos h3::before {
+  background: url(../../img/cursos.svg) no-repeat center center;
+}
+.formacao-extra .cursos li {
+  display: flex;
+  justify-content: space-between;
+}
+.formacao-extra .idiomas h3::before {
+  background: url(../../img/idiomas.svg) no-repeat center center;
+}
+.formacao-extra h3 {
+  font-size: 1.4rem;
+  line-height: 1.4;
+  color: #8f8f8f;
+  text-transform: uppercase;
+  margin-bottom: 3rem;
+  position: relative;
+}
+.formacao-extra h3::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 2.4rem;
+  height: 2.4rem;
+  left: -36px;
+  top: -4px;
+}
+.formacao-extra li {
+  font-size: 1.8rem;
+  line-height: 1.1;
+  margin-bottom: 2rem;
+}
+.formacao-extra span {
+  color: #8f8f8f;
+}
+@media (max-width: 80rem) {
+  .formacao-extra h3::before {
+    position: initial;
+    margin-bottom: 1rem;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
