--- a/style/sass/header.scss
+++ b/style/sass/header.scss
@@ -12,7 +12,7 @@
     a {
       font-size: 1.8rem;
       line-height: 1.3;
-      color: $font-color;
+      color: $font-white;
       padding: 1rem 2rem; //Padding em links aumenta a aréa de clique
     }
   }
@@ -23,7 +23,8 @@
     padding: 2rem;
 
     .header-menu a {
-      background-color: $font-color-white;
+      background-color: $font-white;
+      color: $font-color-black;
       border-radius: .4rem;
     }
   }
