--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -25,7 +25,12 @@ main.introducao{
 
   p{
     font-size: 2.4rem;
-    color: $font-color-gray;
+    color: $font-color-white;
+  }
+
+  img{
+    margin-left: 5rem;
+    border-radius: 10%;
   }
 
   @media (max-width: 1000px){
@@ -35,8 +40,9 @@ main.introducao{
   }
 
   @media (max-width: 800px){
-    grid-template-columns: repeat(2, 1fr);
-    gap: 4rem;
+    grid-template-columns: 1fr;
+    place-items: center;
+    text-align: center;
 
     h1{
       font-size: 3.2rem;
@@ -47,12 +53,6 @@ main.introducao{
         left: 0rem;
       }
     }
-  }
-
-  @media (max-width: 600px){
-    grid-template-columns: 1fr;
-    place-items: center;
-    text-align: center;
 
     img{
       display: none;
