--- a/style/css/index.css
+++ b/style/css/index.css
@@ -354,4 +354,73 @@ main.introducao img {
   }
 }
 
+.contato {
+  max-width: 120rem;
+  padding: 4rem 2rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 10rem;
+}
+.contato .subtitulo {
+  color: #fff;
+}
+@media (max-width: 80rem) {
+  .contato {
+    grid-template-columns: 1fr;
+    padding: 2rem 1rem;
+    gap: 4rem;
+  }
+}
+.contato .contato-text {
+  font-size: 2.4rem;
+  line-height: 1.33;
+  max-width: 40ch;
+  margin-bottom: 6rem;
+  color: #e0e0e0;
+}
+.contato form.contact {
+  display: flex;
+  flex-direction: column;
+  max-width: 75%;
+}
+.contato form.contact label {
+  font-size: 2rem;
+}
+.contato form.contact input {
+  border: none;
+  outline: none;
+  padding: 1rem 2rem;
+  margin: 1rem 0;
+  font-size: 1.6rem;
+  border-radius: 5rem;
+}
+.contato form.contact textarea {
+  border: none;
+  outline: none;
+  padding: 1rem 2rem;
+  margin: 1rem 0;
+  font-size: 1.6rem;
+  border-radius: 1rem;
+  min-width: 100%;
+  min-height: 25rem;
+  max-width: 100%;
+  max-height: 25rem;
+}
+.contato form.contact .btn {
+  border: none;
+  outline: none;
+  padding: 1rem 2rem;
+  margin: 1rem 0;
+  font-size: 1.6rem;
+  border-radius: 5rem;
+  color: #fff;
+  background-color: #00A02D;
+  font-weight: 600;
+  line-height: 1.9rem;
+  cursor: pointer;
+  text-align: center;
+  max-width: 10rem;
+}
+
 /*# sourceMappingURL=index.css.map */
